# remote-server

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
client_dir/: client.c
server_dir/: CMakeLists.txt  connection_handler.c  connection_handler.h  server.c
